# thinq-parent

./: README.md
.claude/: settings.local.json
README/: README.md
thinq-mombti-booth/: README.md  index.html
thinq-parent-back/: .env.example  .gitignore  README.md  pyproject.toml
thinq-parent-back/app/: main.py
thinq-parent-back/app/api/v1/endpoints/: auth.py  health.py
thinq-parent-back/app/core/: config.py  database.py  security.py
thinq-parent-back/app/models/: user.py  user_session.py
thinq-parent-back/app/repositories/: __init__.py  auth_repository.py
thinq-parent-back/app/schemas/: __init__.py  auth.py
thinq-parent-back/app/services/: __init__.py  auth_service.py
thinq-parent-back/docs/: oracle-auth-ddl.sql
thinq-parent-back/tests/: test_health.py  test_security.py
thinq-parent-back/thinq_parent_back.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
thinq-parent-backend/: README.md  appliance_mvp.sql  build.gradle  package-lock.json  package.json  settings.gradle  supabase-postgres-schema.sql
thinq-parent-backend/docs/: supabase-table-spec.md
thinq-parent-backend/src/: server.js
thinq-parent-backend/tmp/: erd.html  upload-test.b64
thinq-parent-front/: package-lock.json  vite.config.js
thinq-parent-front/src/: App.css  App.jsx  index.css
thinq-parent-frontend/: demo-booth.html  demo-intro.html  index.html  vite.config.js
thinq-parent-frontend/chatbot/: package-lock.json  package.json
thinq-parent-frontend/src/: App.css  App.jsx  index.css
thinq-parent-frontend/thinq-parent-front/: index.html  package.json
(+210 files in other folders)
