[project]
name = "thinq-parent-back"
version = "0.1.0"
description = "FastAPI backend for thinq-parent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "oracledb>=2.5.1,<3.0.0",
    "pydantic-settings>=2.8.1,<3.0.0",
    "sqlalchemy>=2.0.38,<3.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1,<1.0.0",
    "pytest>=8.3.5,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
